--- a/handheld/src/main/res/values/colors.xml
+++ b/handheld/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0C7DB9</color>
+    <color name="colorPrimaryDark">#186791</color>
+    <color name="colorAccent">#f0fffeee</color>
+    <color name="colorBackground">#263238</color>
 </resources>
