--- a/wear/src/main/res/layout/face_main.xml
+++ b/wear/src/main/res/layout/face_main.xml
@@ -1,57 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:background="@color/background">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:background="@color/background">
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_box_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.1464" />
+        app:layout_constraintGuide_percent="0.1464"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_box_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.8536" />
+        app:layout_constraintGuide_percent="0.8536"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_box_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1464" />
+        app:layout_constraintGuide_percent="0.1464"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_box_bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8536" />
+        app:layout_constraintGuide_percent="0.8536"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_time_secondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7518" />
+        app:layout_constraintGuide_percent="0.7518"/>
 
     <ImageView
         android:id="@+id/image_background"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="800dp"
+        android:scaleType="fitEnd"
         android:src="@drawable/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:translationY="140dp" />
+        tools:translationY="140dp"/>
 
     <ImageView
         android:id="@+id/icon_alarm"
@@ -65,7 +65,7 @@
         app:layout_constraintEnd_toStartOf="@id/text_alarm"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@id/guide_box_left"
-        app:layout_constraintTop_toTopOf="@id/text_alarm" />
+        app:layout_constraintTop_toTopOf="@id/text_alarm"/>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/text_alarm"
@@ -77,7 +77,7 @@
         app:layout_constraintEnd_toStartOf="@id/guide_box_right"
         app:layout_constraintStart_toEndOf="@id/icon_alarm"
         app:layout_constraintTop_toBottomOf="@id/guide_box_top"
-        tools:text="08:00 (金)" />
+        tools:text="08:00 (金)"/>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/time_primary"
@@ -90,7 +90,7 @@
         app:layout_constraintEnd_toEndOf="@id/guide_box_right"
         app:layout_constraintStart_toStartOf="@id/guide_box_left"
         app:layout_constraintTop_toTopOf="@id/guide_box_top"
-        tools:text="15:25" />
+        tools:text="15:25"/>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/time_secondary"
@@ -103,7 +103,7 @@
         app:fontFamily="@font/fira_mono"
         app:layout_constraintBottom_toTopOf="@id/date"
         app:layout_constraintEnd_toEndOf="@id/time_primary"
-        tools:text="07" />
+        tools:text="07"/>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/date"
@@ -115,6 +115,6 @@
         app:layout_constraintBottom_toTopOf="@id/guide_box_bottom"
         app:layout_constraintEnd_toEndOf="@id/guide_box_right"
         app:layout_constraintStart_toStartOf="@id/guide_box_left"
-        tools:text="18/05/31 (金)" />
+        tools:text="18/05/31 (金)"/>
 
 </android.support.constraint.ConstraintLayout>
