Animate wave, refactor

--- a/handheld/src/main/res/layout/activity_setting.xml
+++ b/handheld/src/main/res/layout/activity_setting.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground">
 
-    <Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
