--- a/handheld/src/main/res/layout/activity_setting.xml
+++ b/handheld/src/main/res/layout/activity_setting.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground">
@@ -17,7 +15,7 @@
         android:titleTextColor="@color/colorText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:layout_width="0dp"
@@ -27,41 +25,6 @@
         android:src="@drawable/wave"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/subscribe_sync_alarm"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/setting_sync_alarm"
-        android:textColor="@color/colorText"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@id/switch_sync_alarm"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
-
-    <Switch
-        android:id="@+id/switch_sync_alarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingEnd="16dp"
-        android:paddingStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@id/summary_sync_alarm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/subscribe_sync_alarm"/>
-
-    <TextView
-        android:id="@+id/summary_sync_alarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@color/colorText"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@id/subscribe_sync_alarm"
-        app:layout_constraintTop_toBottomOf="@id/subscribe_sync_alarm"
-        tools:text="@string/summary_off"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
