Change background color more darker

--- a/handheld/src/main/res/values/colors.xml
+++ b/handheld/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#186791</color>
     <color name="colorAccent">#ffff8d</color>
     <color name="colorText">#f0fffeee</color>
-    <color name="colorBackground">#263238</color>
+    <color name="colorBackground">#1E262A</color>
 </resources>
