--- a/wear/src/main/res/layout/face_main.xml
+++ b/wear/src/main/res/layout/face_main.xml
@@ -72,12 +72,11 @@
         android:id="@+id/time_secondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:textColor="@color/text"
         android:textSize="16sp"
         app:fontFamily="@font/fira_mono"
         app:layout_constraintEnd_toEndOf="@id/time_primary"
-        app:layout_constraintTop_toBottomOf="@id/time_primary"
+        app:layout_constraintBottom_toTopOf="@id/date"
         tools:text="07" />
 
     <androidx.appcompat.widget.AppCompatTextView
