--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="text">#f0fffeee</color>
     <color name="circle">#c0ffff8d</color>
     <color name="wave">#0272B3</color>
-    <color name="backgroundImageAmbientTint">#16344b</color>
+    <color name="waveAmbient">#16344b</color>
     <color name="toastBackground">#14181A</color>
 </resources>
