--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="circle">#c0ffff8d</color>
     <color name="wave">#0272B3</color>
     <color name="waveAmbient">#16344b</color>
-    <color name="toastBackground">#14181A</color>
+    <color name="toastBackground">#80000000</color>
 </resources>
